--- a/demo1/wwwroot/styles.css
+++ b/demo1/wwwroot/styles.css
@@ -1,4 +1,36 @@
+html, body
+{
+	height: 100%;
+}
+
+*
+{
+	box-sizing: border-box;
+}
+  
+
 body
 {
-	padding: 0px;
-};
+	display: flex;
+	background-color:burlywood;
+	overflow:hidden;
+}
+
+nav
+{
+	padding: 10px;
+	background-color: darkgoldenrod;
+}
+
+nav > a
+{
+	color: greenyellow;
+	display: block;
+}
+
+main
+{
+	padding: 10px;
+	background-color: ghostwhite;
+	flex: 1;
+}
