--- a/demo1/Pages/Loader.cshtml
+++ b/demo1/Pages/Loader.cshtml
@@ -6,4 +6,4 @@
 <meter id="value1" min="0" max="100" low="30" high="75" optimum="80" value="25"></meter>
 <button onclick="test()">Load</button>
 
-<script src="scripts.js"></script>
+<div id="myDiv"></div>
