--- a/demo1/Pages/Shared/_Layout.cshtml
+++ b/demo1/Pages/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="styles.css">
     <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+    <script src='scripts.js'></script>
 </head>
 <body>
 
@@ -15,6 +16,7 @@
         <a href="Meter">Meter</a>
         <a href="Plot">Plot</a>
         <a href="Loader">Loader</a>
+        <a href="Pointcloud">Pointcloud</a>
     </nav>
 
 
