--- a/demo1/Pages/Pointcloud.cshtml
+++ b/demo1/Pages/Pointcloud.cshtml
@@ -1,56 +1,60 @@
 @page "/Pointcloud"
 <h1>Pointcloud</h1>
 
+<label for="value1">Low</label>
+<meter id="value1" min="0" max="100" low="30" high="75" optimum="80" value="25"></meter>
+<button onclick="test()">Load</button>
+
 <div id="myDiv"></div>
 
+
 <script>
-Plotly.d3.csv('https://raw.githubusercontent.com/plotly/datasets/master/3d-scatter.csv', function(err, rows)
-{
-    function unpack(rows, key)
-    {
-        return rows.map(function(row)
-        {
-            return row[key];
-        });
-    }
+	function test() {
+		var frame = 102;
+		var framesize = (320 * 20) * (4 * 4);
+		load('/data/miloatv/p1.out', frame * framesize, (frame + 1) * framesize - 1, (x, y, z) => {
+			var trace1 =
+			{
+				x: x, y: y, z: z,
+				mode: 'markers',
+				marker:
+				{
+					size: 1,
+					opacity: 1.0,
+					symbol: 'square'
+				},
+				type: 'scatter3d'
+			};
 
-    var trace1 = 
-    {
-        x:unpack(rows, 'x1'), y: unpack(rows, 'y1'), z: unpack(rows, 'z1'),
-        mode: 'markers',
-        marker: {
-            size: 12,
-            line: {
-            color: 'rgba(217, 217, 217, 1)',
-            width: 0.5},
-            opacity: 0.8},
-        type: 'scatter3d'
-    };
-    console.log(trace1.x);
-
-    var trace2 = 
-    {
-        x:unpack(rows, 'x2'), y: unpack(rows, 'y2'), z: unpack(rows, 'z2'),
-        mode: 'markers',
-        marker: {
-            color: 'rgb(127, 127, 127)',
-            size: 12,
-            symbol: 'square',
-            line: {
-            color: 'rgb(204, 204, 204)',
-            width: 1},
-            opacity: 0.8},
-        type: 'scatter3d'
-    };
-
-    var data = [trace1, trace2];
-    var layout = {margin: {
-        l: 0,
-        r: 0,
-        b: 0,
-        t: 0
-    }};
-    Plotly.newPlot('myDiv', data, layout);
-});
-
+			var layout =
+			{
+				margin:
+				{
+					l: 0,
+					r: 0,
+					b: 0,
+					t: 0
+				},
+				scene: {
+					aspectmode: "manual",
+					aspectratio: {
+						x: 1, y: 1, z: 1,
+					},
+					xaxis: {
+						nticks: 10,
+						range: [0, 6],
+					},
+					yaxis: {
+						nticks: 10,
+						range: [-3, 3],
+					},
+					zaxis: {
+						nticks: 10,
+						range: [-3, 3],
+					}
+				},
+			};
+			Plotly.newPlot('myDiv', [trace1], layout);
+		});
+	}
 </script>
