--- a/demo1/Pages/Shared/_Layout.cshtml
+++ b/demo1/Pages/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
 		<a href="Loader">Loader</a>
 		<a href="Pointcloud">Pointcloud</a>
 		<a href="OSM">OSM</a>
+		<a href="Table">Table</a>
 	</nav>
 
 
