--- a/demo1/Pages/Pointcloud.cshtml
+++ b/demo1/Pages/Pointcloud.cshtml
@@ -9,52 +9,53 @@
 
 
 <script>
-	function test() {
-		var frame = 102;
-		var framesize = (320 * 20) * (4 * 4);
-		load('/data/miloatv/p1.out', frame * framesize, (frame + 1) * framesize - 1, (x, y, z) => {
-			var trace1 =
+function test()
+{
+	var frame = 102;
+	var framesize = (320 * 20) * (4 * 4);
+	req_arraybuffer('/data/miloatv/p1.out', frame * framesize, (frame + 1) * framesize - 1, (x, y, z) => {
+		var trace1 =
+		{
+			x: x, y: y, z: z,
+			mode: 'markers',
+			marker:
 			{
-				x: x, y: y, z: z,
-				mode: 'markers',
-				marker:
-				{
-					size: 1,
-					opacity: 1.0,
-					symbol: 'square'
-				},
-				type: 'scatter3d'
-			};
+				size: 1,
+				opacity: 1.0,
+				symbol: 'square'
+			},
+			type: 'scatter3d'
+		};
 
-			var layout =
+		var layout =
+		{
+			margin:
 			{
-				margin:
-				{
-					l: 0,
-					r: 0,
-					b: 0,
-					t: 0
+				l: 0,
+				r: 0,
+				b: 0,
+				t: 0
+			},
+			scene: {
+				aspectmode: "manual",
+				aspectratio: {
+					x: 1, y: 1, z: 1,
 				},
-				scene: {
-					aspectmode: "manual",
-					aspectratio: {
-						x: 1, y: 1, z: 1,
-					},
-					xaxis: {
-						nticks: 10,
-						range: [0, 6],
-					},
-					yaxis: {
-						nticks: 10,
-						range: [-3, 3],
-					},
-					zaxis: {
-						nticks: 10,
-						range: [-3, 3],
-					}
+				xaxis: {
+					nticks: 10,
+					range: [0, 6],
 				},
-			};
-			Plotly.newPlot('myDiv', [trace1], layout);
-		});
-	}
+				yaxis: {
+					nticks: 10,
+					range: [-3, 3],
+				},
+				zaxis: {
+					nticks: 10,
+					range: [-3, 3],
+				}
+			},
+		};
+		Plotly.newPlot('myDiv', [trace1], layout);
+	});
+}
 </script>
