--- a/demo1/Pages/Shared/_Layout.cshtml
+++ b/demo1/Pages/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 	<script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+	<script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
 	<script src='scripts.js'></script>
 </head>
 
@@ -23,6 +24,7 @@
 		<a href="Pointcloud">Pointcloud</a>
 		<a href="OSM">OSM</a>
 		<a href="Table">Table</a>
+		<a href="MQTT">MQTT</a>
 	</nav>
 
 
