--- a/demo1/Pages/Pointcloud.cshtml
+++ b/demo1/Pages/Pointcloud.cshtml
@@ -13,7 +13,7 @@ function test()
 {
 	var frame = 102;
 	var framesize = (320 * 20) * (4 * 4);
-	req_arraybuffer('/data/miloatv/p1.out', frame * framesize, (frame + 1) * framesize - 1, (x, y, z) => {
+	req_arraybuffer('/data/miloatv_lidar/p1.out', frame * framesize, (frame + 1) * framesize - 1, (x, y, z) => {
 		var trace1 =
 		{
 			x: x, y: y, z: z,
