--- a/demo1/Pages/Table.cshtml
+++ b/demo1/Pages/Table.cshtml
@@ -3,7 +3,6 @@
 
 <button onclick="show_archetypes()">Show series</button>
 <button onclick="new_plotter_window()" id="plotbutton">New plotter window</button>
-<a id="plotlink" href="" target="_blank">Plotter</a>
 <hr>
 <table id="table"></table>
 
@@ -14,70 +13,14 @@ var plotlink_href = "";
 function new_plotter_window()
 {
 	w = 800;
-	h = 600;
+	h = 400;
 	x = 400;
 	y = 400;
 	window.open(plotlink_href,"Plotter:"+plotlink_href,"resizable=no,toolbar=no,scrollbars=no,menubar=no,status=no,directories=n o,width="+w+",height="+h+",left="+x+",top="+y+"");
 }
 
 
-function generate_htmltable_archetypes(etable, archetypes)
-{
-	var cell;
-	var row;
-	row = etable.insertRow(-1);
-	cell = row.insertCell(-1);
-	cell.innerHTML = "series";
-	cell = row.insertCell(-1);
-	cell.innerHTML = "component";
-	cell = row.insertCell(-1);
-	cell.innerHTML = "quantity";
-	cell = row.insertCell(-1);
-	cell.innerHTML = "n";
-	cell = row.insertCell(-1);
-	cell.innerHTML = "offset";
-	cell = row.insertCell(-1);
-	cell.innerHTML = "size";
-	cell = row.insertCell(-1);
-	cell.innerHTML = "endian";
-	cell = row.insertCell(-1);
-	cell.innerHTML = "value";
-	for (let archetype in archetypes)
-	{
-		var components = archetypes[archetype].components;
-		//console.log(i);
-		for (let j in components)
-		{
-			row = etable.insertRow(-1);
-			cell = row.insertCell(-1);
-			cell.innerHTML = archetype;
-			cell = row.insertCell(-1);
-			cell.innerHTML = j;
-			cell = row.insertCell(-1);
-			cell.innerHTML = components[j].quantity;
-			cell.classList.add(components[j].quantity);
-			components[j]._color = window.getComputedStyle(cell ,null).getPropertyValue('background-color');
-			cell = row.insertCell(-1);
-			cell.innerHTML = components[j].n;
-			cell = row.insertCell(-1);
-			cell.innerHTML = components[j].offset;
-			cell = row.insertCell(-1);
-			cell.innerHTML = components[j].size;
-			cell = row.insertCell(-1);
-			cell.innerHTML = components[j].endian;
-			cell = row.insertCell(-1);
-			cell.innerHTML = 0;
-			components[j]._cell = cell;
-			/*
-			cell.onclick = () => 
-			{
-				hej(name, j);
-			}
-			*/
-		}
-	}
-	//var row = etable.insertRow(0);
-}
+
 
 var etable = document.getElementById("table");
 var plotbutton = document.getElementById("plotbutton");
@@ -121,7 +64,7 @@ function generate_url(archetypes)
 		plotbutton.disabled = false;
 		var s = JSON.stringify(selected);
 		var t = encodeURIComponent(btoa(s));
-		plotlink_href = "/Plotter#"+t;
+		plotlink_href = "/plotter.html#"+t;
 	}
 	else
 	{
