--- a/demo1/Pages/Shared/_Layout.cshtml
+++ b/demo1/Pages/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 	<script src='scripts.js'></script>
 </head>
 
-<body>
+<body style="display: flex;">
 
 	<nav>
 		<h4>The<br>Sidebar<br>Navigator</h4>
