--- a/demo1/wwwroot/styles.css
+++ b/demo1/wwwroot/styles.css
@@ -11,7 +11,7 @@ html, body
 
 body
 {
-	display: flex;
+	
 	background-color:burlywood;
 	/*overflow:hidden;*/
 }
@@ -51,7 +51,7 @@ table
 td
 {
 	padding: 5px;
-	border: 1px solid black;
+	border: 1px solid rgb(212, 212, 212);
 }
 
 
