--- a/demo1/Pages/Shared/_Layout.cshtml
+++ b/demo1/Pages/Shared/_Layout.cshtml
@@ -23,8 +23,8 @@
 		<a href="Loader">Loader</a>
 		<a href="Pointcloud">Pointcloud</a>
 		<a href="OSM">OSM</a>
-		<a href="Table">Table</a>
 		<a href="MQTT">MQTT</a>
+		<a href="Series">Series</a>
 	</nav>
 
 
